--- a/genapp/package.json
+++ b/genapp/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.1"
+    "react-native": "0.59.1",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
@@ -22,6 +24,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets": ["assets/fonts/Roboto"]
+    "assets": [
+      "assets/fonts/Roboto"
+    ]
   }
 }
