--- a/genapp/package.json
+++ b/genapp/package.json
@@ -10,7 +10,9 @@
     "react": "16.8.3",
     "react-native": "0.59.1",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-async-await": "^1.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
